# libchronos

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benchmark/: CMakeLists.txt  benchmark_e2e_latency.cpp  benchmark_mpmc_queue.cpp  benchmark_order_id_generator.cpp  benchmark_orderbook.cpp  benchmark_risk_engine.cpp
include/chronos/core/: types.hpp
include/chronos/execution/: order_gateway.hpp
include/chronos/io/security/: security.hpp
include/chronos/trading/: strategy_engine.hpp
include/chronos/utils/: mpmc_queue.hpp
report/: ci-cd-experience-2026-06-23.html  index.html
src/backtest/: backtest_engine.cpp  metrics.cpp  time_replayer.cpp
src/core/: config.cpp  error.cpp  parse_decimal.cpp  types.cpp
src/execution/: binance_http_client.cpp  binance_user_stream.cpp  execution_handler.cpp  order_gateway.cpp
src/io/protocols/: binance_json_protocol.cpp  okx_json_protocol.cpp
src/io/security/: hmac_sha256.cpp  security.cpp
src/io/transports/: websocket_tls_transport.cpp
src/logging/: log_reader.cpp  log_writer.cpp  zmq_bridge.cpp
src/market_data/: gateway.cpp  gateway_v2_factory.cpp  orderbook.cpp  orderbook_v2.cpp
src/market_data/adapters/: binance_adapter.cpp  okx_adapter.cpp  thin_mux_adapter.cpp
src/monitoring/: health_monitor.cpp
src/risk/: risk_engine.cpp
src/trading/: position_manager.cpp  strategy_engine.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_any_gateway.cpp  test_architecture_comparison.cpp  test_backtest_engine.cpp  test_binance_connectivity.cpp  test_execution_handler.cpp  test_full_pipeline_perf.cpp  test_health_check.cpp  test_integration_pipeline.cpp  test_log_reader.cpp  test_log_writer.cpp  test_metrics.cpp  test_mpmc_queue.cpp  test_okx_connectivity.cpp  test_order_gateway.cpp  test_order_id_generator.cpp  test_orderbook_basic.cpp  test_parse_decimal.cpp  test_pbt_properties.cpp  test_position_manager.cpp  test_protocol.cpp  test_risk_engine.cpp  test_security.cpp  test_strategy_engine.cpp  test_stress.cpp  test_stress_multi_exchange.cpp  test_system.cpp  test_time_replayer.cpp  test_trading_pipeline.cpp  test_zmq_bridge.cpp
